skills/ghost-browser/state/browser.log
{"status": "starting", "message": "Starting ghost browser in foreground..."}
Traceback (most recent call last):
  File "C:\Users\weylm\.openclaw\workspace\skills\ghost-browser\scripts\ghost_browser.py", line 5821, in <module>
    main()
    ~~~~^^
  File "C:\Users\weylm\.openclaw\workspace\skills\ghost-browser\scripts\ghost_browser.py", line 5817, in main
    sys.exit(args.func(args))
             ~~~~~~~~~^^^^^^
  File "C:\Users\weylm\.openclaw\workspace\skills\ghost-browser\scripts\ghost_browser.py", line 3675, in cmd_start
    asyncio.run(run_daemon(0, args.headless, profile_dir, extensions, proxy))
    ~~~~~~~~~~~^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Python314\Lib\asyncio\runners.py", line 204, in run
    return runner.run(main)
           ~~~~~~~~~~^^^^^^
  File "C:\Python314\Lib\asyncio\runners.py", line 127, in run
    return self._loop.run_until_complete(task)
           ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^^^^^^
  File "C:\Python314\Lib\asyncio\base_events.py", line 719, in run_until_complete
    return future.result()
           ~~~~~~~~~~~~~^^
  File "C:\Users\weylm\.openclaw\workspace\skills\ghost-browser\scripts\ghost_browser.py", line 3353, in run_daemon
    browser, actual_port = await start_browser(port, headless, profile_dir, extensions, proxy)
                           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\weylm\.openclaw\workspace\skills\ghost-browser\scripts\ghost_browser.py", line 3282, in start_browser
    import nodriver as uc
  File "C:\Users\weylm\AppData\Roaming\Python\Python314\site-packages\nodriver\__init__.py", line 9, in <module>
    from nodriver import cdp
  File "C:\Users\weylm\AppData\Roaming\Python\Python314\site-packages\nodriver\cdp\__init__.py", line 6, in <module>
    from . import (accessibility, animation, audits, autofill, background_service, bluetooth_emulation, browser, css, cache_storage, cast, console, dom, dom_debugger, dom_snapshot, dom_storage, debugger, device_access, device_orientation, emulation, event_breakpoints, extensions, fed_cm, fetch, file_system, headless_experimental, heap_profiler, io, indexed_db, input_, inspector, layer_tree, log, media, memory, network, overlay, pwa, page, performance, performance_timeline, preload, profiler, runtime, schema, security, service_worker, storage, system_info, target, tethering, tracing, web_audio, web_authn)
  File "C:\Users\weylm\AppData\Roaming\Python\Python314\site-packages\nodriver\cdp\accessibility.py", line 14, in <module>
    from . import dom
  File "C:\Users\weylm\AppData\Roaming\Python\Python314\site-packages\nodriver\cdp\dom.py", line 14, in <module>
    from . import page
  File "C:\Users\weylm\AppData\Roaming\Python\Python314\site-packages\nodriver\cdp\page.py", line 16, in <module>
    from . import emulation
  File "C:\Users\weylm\AppData\Roaming\Python\Python314\site-packages\nodriver\cdp\emulation.py", line 15, in <module>
    from . import network
  File "C:\Users\weylm\AppData\Roaming\Python\Python314\site-packages\nodriver\cdp\network.py", line 1365
    #: JSON (\ufffdInf).
             ^
SyntaxError: Non-UTF-8 code starting with '\xb1' on line 1365, but no encoding declared; see https://peps.python.org/pep-0263/ for details
{"status": "starting", "message": "Starting ghost browser in foreground..."}
Traceback (most recent call last):
  File "C:\Users\weylm\.openclaw\workspace\skills\ghost-browser\scripts\ghost_browser.py", line 5821, in <module>
    main()
    ~~~~^^
  File "C:\Users\weylm\.openclaw\workspace\skills\ghost-browser\scripts\ghost_browser.py", line 5817, in main
    sys.exit(args.func(args))
             ~~~~~~~~~^^^^^^
  File "C:\Users\weylm\.openclaw\workspace\skills\ghost-browser\scripts\ghost_browser.py", line 3675, in cmd_start
    asyncio.run(run_daemon(0, args.headless, profile_dir, extensions, proxy))
    ~~~~~~~~~~~^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Python314\Lib\asyncio\runners.py", line 204, in run
    return runner.run(main)
           ~~~~~~~~~~^^^^^^
  File "C:\Python314\Lib\asyncio\runners.py", line 127, in run
    return self._loop.run_until_complete(task)
           ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^^^^^^
  File "C:\Python314\Lib\asyncio\base_events.py", line 719, in run_until_complete
    return future.result()
           ~~~~~~~~~~~~~^^
  File "C:\Users\weylm\.openclaw\workspace\skills\ghost-browser\scripts\ghost_browser.py", line 3353, in run_daemon
    browser, actual_port = await start_browser(port, headless, profile_dir, extensions, proxy)
                           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\weylm\.openclaw\workspace\skills\ghost-browser\scripts\ghost_browser.py", line 3307, in start_browser
    config = uc.Config(
        user_data_dir=str(profile_dir),
        headless=headless,
        browser_args=browser_args if browser_args else None,
    )
  File "C:\Users\weylm\AppData\Roaming\Python\Python314\site-packages\nodriver\core\config.py", line 90, in __init__
    browser_executable_path = find_chrome_executable()
  File "C:\Users\weylm\AppData\Roaming\Python\Python314\site-packages\nodriver\core\config.py", line 322, in find_chrome_executable
    raise FileNotFoundError(
    ...<2 lines>...
    )
FileNotFoundError: could not find a valid chrome browser binary. please make sure chrome is installed.or use the keyword argument 'browser_executable_path=/path/to/your/browser' 
{"status": "starting", "message": "Starting ghost browser in foreground..."}
Traceback (most recent call last):
  File "C:\Users\weylm\.openclaw\workspace\skills\ghost-browser\scripts\ghost_browser.py", line 5821, in <module>
    main()
    ~~~~^^
  File "C:\Users\weylm\.openclaw\workspace\skills\ghost-browser\scripts\ghost_browser.py", line 5817, in main
    sys.exit(args.func(args))
             ~~~~~~~~~^^^^^^
  File "C:\Users\weylm\.openclaw\workspace\skills\ghost-browser\scripts\ghost_browser.py", line 3675, in cmd_start
    asyncio.run(run_daemon(0, args.headless, profile_dir, extensions, proxy))
    ~~~~~~~~~~~^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Python314\Lib\asyncio\runners.py", line 204, in run
    return runner.run(main)
           ~~~~~~~~~~^^^^^^
  File "C:\Python314\Lib\asyncio\runners.py", line 127, in run
    return self._loop.run_until_complete(task)
           ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^^^^^^
  File "C:\Python314\Lib\asyncio\base_events.py", line 719, in run_until_complete
    return future.result()
           ~~~~~~~~~~~~~^^
  File "C:\Users\weylm\.openclaw\workspace\skills\ghost-browser\scripts\ghost_browser.py", line 3353, in run_daemon
    browser, actual_port = await start_browser(port, headless, profile_dir, extensions, proxy)
                           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\weylm\.openclaw\workspace\skills\ghost-browser\scripts\ghost_browser.py", line 3313, in start_browser
    browser = await uc.start(config=config)
              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\weylm\AppData\Roaming\Python\Python314\site-packages\nodriver\core\util.py", line 95, in start
    return await Browser.create(config)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\weylm\AppData\Roaming\Python\Python314\site-packages\nodriver\core\browser.py", line 90, in create
    await instance.start()
  File "C:\Users\weylm\AppData\Roaming\Python\Python314\site-packages\nodriver\core\browser.py", line 393, in start
    await self.connection.send(cdp.target.set_discover_targets(discover=True))
  File "C:\Users\weylm\AppData\Roaming\Python\Python314\site-packages\nodriver\core\connection.py", line 405, in send
    if not self.websocket or self.closed:
                             ^^^^^^^^^^^
  File "C:\Users\weylm\AppData\Roaming\Python\Python314\site-packages\nodriver\core\connection.py", line 361, in __getattr__
    return getattr(self.target, item)
AttributeError: 'NoneType' object has no attribute 'closed'
successfully removed temp profile C:\Users\weylm\.openclaw\workspace\SKILLS\ghost-browser\state\profiles\default
